# etcd_performance_analyzer

./: .gitignore  README.md  etcd_analyzer_client_chat.py  etcd_analyzer_mcp_agent_stor2db.py  etcd_analyzer_mcp_server.py  pyproject.toml
config/: etcd_config.py  metrics-etcd-full.yml  metrics-etcd-short.yml  metrics-etcd.yml
elt/: etcd_analyzer_elt_backend_commit.py  etcd_analyzer_elt_cluster_info.py  etcd_analyzer_elt_compact_defrag.py  etcd_analyzer_elt_general_info.py  etcd_analyzer_elt_json2table.py  etcd_analyzer_elt_network_io-new.py  etcd_analyzer_elt_network_io.py  etcd_analyzer_elt_utility.py
etcd-loads/: etcd-load-tools.py  etcd-load-tools.sh  requirements.txt
ocauth/: ocp_auth.py
ocp_etcd_analyzer_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
storage/: etcd_analyzer_stor_backend_commit.py  etcd_analyzer_stor_compact_defrag.py  etcd_analyzer_stor_disk_io.py  etcd_analyzer_stor_disk_wal_fsync.py  etcd_analyzer_stor_general_info.py  etcd_analyzer_stor_network_io.py
tools/: etcd_disk_backend_commit.py  etcd_disk_compact_defrag.py  etcd_disk_io.py  etcd_disk_wal_fsync.py  etcd_general_info.py  etcd_network_io.py  ocp_promql_basequery.py
webroot/: etcd_analyzer_mcp_llm.html  ocp_etcd_analyzer_llm.html
